complete ui(only its shape. no actions)

--- a/src/mainwindow/sass/layout.scss
+++ b/src/mainwindow/sass/layout.scss
@@ -3,17 +3,12 @@
 
 }
 
-.body
+#body
 {
-  padding-right: 260px;
+  padding: 10px 270px 10px 10px;
 }
 
 #addBtn
 {
   padding-top: 24px;
-}
-
-#body
-{
-  margin: 10px;
 }
