mainwindow에 presentational 구조 적용

--- a/src/mainwindow/css/layout.css
+++ b/src/mainwindow/css/layout.css
@@ -1,14 +1,9 @@
-#body
+#Body
 {
   padding: 10px 270px 10px 10px;
 }
 
-#addBtn
-{
-  padding-top: 24px;
-}
-
-#add-eventgroup-btn
+#Body-addEventgroupBtn
 {
   margin-top: 1rem;
 }
